# ece420

app/src/main/cpp/: CMakeLists.txt  android_debug.h  audio_common.cpp  audio_common.h  audio_feature.cpp  audio_feature.h  audio_main.cpp  audio_player.cpp  audio_player.h  audio_recorder.cpp  audio_recorder.h  buf_manager.h  debug_utils.cpp  debug_utils.h  ece420_lib.h  ece420_main.cpp  ece420_main.h  ndk-stl-config.cmake
app/src/main/cpp/clf/2_inst_clf/: 2instclf.cpp  2instclf.h  SVC_2_0.cpp  SVC_2_1.cpp  SVC_2_2.cpp  SVC_2_3.cpp  SVC_2_4.cpp
app/src/main/cpp/clf/2_inst_rfc/: 2instrfc.cpp  2instrfc.h  RFC_inst2_0.cpp  RFC_inst2_0.h  RFC_inst2_1.cpp  RFC_inst2_1.h  RFC_inst2_2.cpp  RFC_inst2_2.h  RFC_inst2_3.cpp  RFC_inst2_3.h  RFC_inst2_4.cpp  RFC_inst2_4.h
app/src/main/cpp/gist/: Gist.cpp  Gist.h
app/src/main/cpp/gist/core/: CoreFrequencyDomainFeatures.cpp  CoreFrequencyDomainFeatures.h  CoreTimeDomainFeatures.cpp  CoreTimeDomainFeatures.h
app/src/main/cpp/gist/fft/: AccelerateFFT.cpp  AccelerateFFT.h  WindowFunctions.cpp  WindowFunctions.h
app/src/main/cpp/gist/mfcc/: MFCC.cpp  MFCC.h
app/src/main/cpp/gist/onset-detection-functions/: OnsetDetectionFunction.cpp  OnsetDetectionFunction.h
app/src/main/cpp/gist/pitch/: Yin.cpp  Yin.h
app/src/main/cpp/kiss_fft/: kiss_fft.c  kissfft.hh
app/src/main/cpp/kiss_fft/test/: benchfftw.c  benchkiss.c  doit.c  mk_test.py  pstats.c  pstats.h  tailscrap.m  test_real.c  test_vs_dft.c  testcpp.cc  twotonetest.c
app/src/main/cpp/kiss_fft/tools/: kfc.c  kfc.h  kiss_fastfir.c  kiss_fftnd.c  kiss_fftnd.h  kiss_fftndr.c  (+4 more)
(+6 files in other folders)
